<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meen</string>
    <string name="sendBtn">Send</string>
    <string name="action_settings">Settings</string>
    <string name="phone_hint">Enter phone number</string>
    <string name="msg_hint">Compose message</string>
    <string name="title_activity_receive">ReceiveActivity</string>
    <string name="hello_world">Hello World!</string>
    <string name="newBtn">New message</string>
    <string name="search">Search message</string>
    <string name="title_activity_thread">ThreadActivity</string>
    <string name="send">Send</string>
    <string name="title_activity_gui">GUIActivity</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="date">Date</string>
    <string name="action_search">Search</string>
    <string name="action_new">New Message</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="setting_ui">UI Customization</string>
    <string name="background_title">Background</string>
    <string name="background_sum">Select the global background for the application</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_exception">Exception Handler</string>
    <string name="action_bar_title">Theme</string>
    <string name="action_bar_summary">Change the theme of the application</string>
    <string name="fab_title">Floating button</string>
    <string name="fab_summary">Change the color of the floating action button</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="reply">Reply</string>
    <string name="dismiss">Close</string>
    <string name="enter_message">Tap to reply</string>
    <string name="setting_general">General</string>
    <string name="popup_title">Enable popup message</string>
    <string name="popup_summary">Show popup when receiving new message</string>
    <string name="delay_title">Delay sending message</string>
    <string name="delay_summary">Delay sending message for 5 seconds, touch the progress bar to cancel</string>
    <string name="night_mode_title">Night mode</string>
    <string name="night_mode_summary">Night mode will be automatically enabled between 22:00 and 6:00</string>
    <string name="font_title">Fonts</string>
    <string name="font_summary">Change the fonts of the application</string>
    <string name="swipe_title">Swipe to back</string>
    <string name="swipe_summary">Swipe from left to right to go back</string>
    <string name="to">To</string>
    <string name="call">Call this person</string>
    <string name="title_activity_send">SendActivity</string>
    <string name="no_message">No Message</string>
    <string name="toolbar_pic_title">Toolbar picture</string>
    <string name="toolbar_pic_summary">Use contact picture in the toolbar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">About</string>
    <string name="project_intro">This project is made for the Special Subject 2</string>
    <string name="title_activity_license">Open Source Licenses</string>
    <string name="apache_license">Apache License 2.0</string>
    <string name="swipe_back">SwipeBack</string>
    <string name="material_dialog">Material Dialog</string>
    <string name="material_progress">Material-ish Progress</string>
    <string name="load_toast">Load Toast</string>
    <string name="android_open_source">Android Open Source Project</string>


</resources>
