<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="io.wyrmise.meen.LicenseActivity">

    <RelativeLayout
        android:id="@+id/meen"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true">

        <TextView
            android:id="@+id/app_name"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_name"
            android:text="@string/apache_license" />
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/meen"
        android:background="@drawable/divider" />

    <RelativeLayout
        android:id="@+id/load_open"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/divider"
        android:clickable="true">

        <TextView
            android:id="@+id/load_toast"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/load_toast" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/load_toast"
            android:text="@string/apache_license" />
    </RelativeLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/load_open"
        android:background="@drawable/divider" />

    <RelativeLayout
        android:id="@+id/dialog"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/divider2"
        android:clickable="true">

        <TextView
            android:id="@+id/dialog_name"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/material_dialog" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_name"
            android:text="@string/apache_license" />
    </RelativeLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/dialog"
        android:background="@drawable/divider" />

    <RelativeLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/divider3"
        android:clickable="true">

        <TextView
            android:id="@+id/progress_name"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/material_progress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress_name"
            android:text="@string/apache_license" />
    </RelativeLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/progress"
        android:background="@drawable/divider" />

    <RelativeLayout
        android:id="@+id/swipe_back"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/divider4"
        android:clickable="true">

        <TextView
            android:id="@+id/swipe_back_name"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/swipe_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/swipe_back_name"
            android:text="@string/apache_license" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/swipe_back"
        android:background="@drawable/divider" />

</RelativeLayout>

