<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popupLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/messageDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:maxLines="2"
        android:scrollHorizontally="true"
        android:text="@string/hello_world"
        android:textSize="18sp"/>
    <View
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/messageDialog"
        android:layout_marginTop="5sp"
        android:background="@android:color/darker_gray"/>
    <ImageButton
        android:id="@+id/reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/divider"
        android:layout_marginTop="6sp"
        android:background="@null"
        android:src="@drawable/ic_action_send_now"
        android:text="@string/reply"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/charCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/compose_message"
        android:layout_below="@id/divider"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="14sp"
        android:layout_toLeftOf="@id/reply"
        android:layout_toStartOf="@id/reply"
        android:text="160"
        android:textColor="@color/dark_green"/>

    <EditText
        android:id="@+id/compose_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginTop="5sp"
        android:layout_toLeftOf="@id/reply"
        android:layout_toStartOf="@id/reply"
        android:ellipsize="end"
        android:hint="@string/enter_message"
        android:imeOptions="flagNoFullscreen"
        android:lines="1"
        android:paddingEnd="23sp"
        android:paddingRight="23sp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textSize="17sp"/>




</RelativeLayout>
